// See README.txt for information and build instructions.

syntax = "proto3";

package voltha;

import "google/api/annotations.proto";

option java_package = "org.opencord.voltha";
option java_outer_classname = "VolthaProtos";
option csharp_namespace = "Opencord.Voltha.Voltha";

// Empty message
message NullMessage {}

// Encode health status of a Voltha instance
message HealthStatus {

  // Health states
  enum HealthState {
    HEALTHY = 0;  // The instance is healthy
    OVERLOADED = 1;  // The instance is overloaded, decrease query rate
    DYING = 2;  // The instance is in a critical condition, do not use it
  }

  // Current state of health of this Voltha instance
  HealthState state = 1;

}

service HealthService {

  // Return current health status of a Voltha instance
  rpc GetHealthStatus(NullMessage) returns (HealthStatus) {
    option (google.api.http) = {
      get: "/health"
      body: '*'
    };
  }

}

